[package]
name = "rosu-pp"
version = "3.1.0"
edition = "2024"
authors = ["MaxOhn <ohn.m@hotmail.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MaxOhn/rosu-pp"
documentation = "https://docs.rs/rosu-pp/"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[features]
default = []
sync = []
tracing = ["rosu-map/tracing"]

[dependencies]
divan = "0.1.21"
rosu-map = { version = "0.2.1" }
rosu-mods = { version = "0.4.0" }

[dev-dependencies]
divan = { version = "0.1.21" }
proptest = { version = "1.8.0" }
rosu-mods = { version = "0.4.0", features = ["macros"] }

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

[[bench]]
name = "hitresult_generators"
harness = false
